Update project links section in index.html

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           </div>
           <h3>See All Projects</h3>
           <p>Explore my full collection of works and contributions on GitHub.</p>
-          <div class="project-links">
+          <div class="view-more-link">
             <a href="https://github.com/Dan-Samuel" target="_blank" class="demo-links">Visit GitHub</a>
           </div>
         </div>
