Revise hero paragraph and about section subtitle
Removed a sentence from the hero paragraph and updated the subtitle in the about section.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="hero-paragraph">
           <h2>Hi, I'm <span id="hero-name">Dan Samuel</span></h2>
           <p>I'm a <span class="role-carousel"><span class="role-text" id="roleText">Product Designer</span></span></p>
-          <p style="font-size: 1.1rem; color: var(--text-muted); margin-bottom: 2rem; line-height: 1.6;">I create beautiful, functional digital experiences. I combine strategic thinking, user-centered design, and clean code to solve problems that matter. Let's build something amazing together.</p>
+          <p style="font-size: 1.1rem; color: var(--text-muted); margin-bottom: 2rem; line-height: 1.6;">I create beautiful, functional digital experiences. I combine strategic thinking, user-centered design, and clean code to solve problems that matter.</p>
           <div style="margin-top: 3rem;">
             <button type="submit" class="cta-btn">Let's Build</button>
             <button type="submit" class="cta-btn" style="background: transparent; border: 2px solid var(--primary); color: var(--primary);">Learn More</button>
@@ -51,11 +51,11 @@
       <div class="about-container">
         <div class="about-header">
           <p class="section-title"><span class="highlighted-subheaders">About</span> Me</p>
-          <p class="about-subtitle">Passionate about creating digital experiences that make a difference</p>
         </div>
 
         <div class="about-intro-full">
-          <h3>I'm Dan Samuel, a <span>Creative Developer</span></h3>
+          <h3>I'm Dan Samuel, a <span>Creative.</span></h3>
+          <p class="about-subtitle">Passionate about creating digital experiences that make a difference</p>
           <p>Tech has always been part of my world - from watching how things work, geeking out to gadgets, and eventually building and solving more. I'm a designer & developer who loves bringing ideas to life, turning creativity into reality through code.</p>
         </div>
 
