--- a/index.html
+++ b/index.html
@@ -60,12 +60,9 @@
         </div>
 
         <div class="about-content">
-          <div class="about-image-wrapper">
             <div class="about-image-frame">
-              <img src="profile.png" alt="Dan Samuel" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
+              <img src="./Resources/Hero images/67e2007658e4e4b8d348618a741d1067.jpg" alt="hero-img" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px;">
             </div>
-            <div class="about-image-accent"></div>
-          </div>
 
           <div class="about-highlights">
             <div class="highlight-item">
