Update about section with combined introduction
Merged the introduction and subtitle into a single paragraph.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="about-intro-full">
-          <h3>I'm Dan Samuel, a <span>Creative.</span></h3>
-          <p class="about-subtitle">Passionate about creating digital experiences that make a difference</p>
+          
+          <p class="about-subtitle"><p>I'm Dan Samuel, a <span>Creative.</span></p>Passionate about creating digital experiences that make a difference</p>
           <p>Tech has always been part of my world - from watching how things work, geeking out to gadgets, and eventually building and solving more. I'm a designer & developer who loves bringing ideas to life, turning creativity into reality through code.</p>
         </div>
 
