Fix HTML tags in about subtitle paragraph

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="about-intro-full">
           
-          <p class="about-subtitle">I'm Dan Samuel, a Creative - Passionate about creating digital experiences that make a difference</p>
+          I'm Dan Samuel, a Creative - Passionate about creating digital experiences that make a difference.
           <p>Tech has always been part of my world - from watching how things work, geeking out to gadgets, and eventually building and solving more. I'm a designer & developer who loves bringing ideas to life, turning creativity into reality through code.</p>
         </div>
 
