--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="hero-paragraph">
           <h2>Hi, I'm <span id="hero-name">Dan Samuel</span></h2>
           <p id="career-paths-intro">I'm a <span class="role-carousel"><span class="role-text" id="roleText">Product Designer</span></span></p>
-          <p style="font-size: 1.1rem; color: var(--text-muted); margin-bottom: 2rem; line-height: 1.6;">I create beautiful, functional digital experiences. I combine strategic thinking, user-centered design, and clean code to solve problems that matter.</p>
+          <p style="font-size: clamp(0.75rem, 2vw, 1rem); color: var(--text-muted); margin-bottom: 2rem; line-height: 1.6;">I create beautiful, functional digital experiences. I combine strategic thinking, user-centered design, and clean code to solve problems that matter.</p>
           <div style="margin-top: 3rem;">
             <button type="submit" class="cta-btn">Let's Build</button>
             <button type="submit" class="cta-btn" style="background: transparent; border: 2px solid var(--primary); color: var(--primary);">Learn More</button>
