--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
 
             <div class="contact-group">
               <div class="contact-info-group">
-                <i class="fas fa-envelope"></i><p><a href="mailto:samueldan.ij@gmail.com">samueldan.ij@gmail.com</p>
+                <i class="fas fa-envelope"></i><p><a href="mailto:samueldan.ij@gmail.com">samueldan.ij@gmail.com</a></p>
               </div>
 
               <div class="contact-info-group">
-                <i class="fas fa-phone"></i><p><a href="tel:+234 816 0430 154">+234 816 0430 154</p>
+                <i class="fas fa-phone"></i><p><a href="tel:+234 816 0430 154">+234 816 0430 154</a></p>
               </div>
             </div>
 
