--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@
 
       <!-- Project Card -->
       <div class="project-card">
-        <div class="project-image placeholder-project"></div>
+        <div class="project-image placeholder-project">
+          <img src="./Resources/Project thumbnails/1769623229436.png" alt="project-thumbnail">
+        </div>
         <div class="project-info">
           <h3>Project One</h3>
           <p>A short description of this project goes here. Keep it concise but clear.</p>
@@ -233,7 +235,9 @@
 
       <!-- Repeat cards as needed -->
       <div class="project-card">
-        <div class="project-image placeholder-project"></div>
+        <div class="project-image placeholder-project">
+          <img src="./Resources/Project thumbnails/1769623240190.png" alt="project-thumbnail">
+        </div>
         <div class="project-info">
           <h3>Project Two</h3>
           <p>Another cool project description. Highlight its best features here.</p>
@@ -245,7 +249,9 @@
       </div>
 
       <div class="project-card">
-        <div class="project-image placeholder-project"></div>
+        <div class="project-image placeholder-project">
+          <img src="./Resources/Project thumbnails/1769623266651.png" alt="project-thumbnail">
+        </div>
         <div class="project-info">
           <h3>Project Three</h3>
           <p>Describe what makes this project unique and worth checking out.</p>
@@ -257,7 +263,9 @@
       </div>
 
       <div class="project-card">
-        <div class="project-image placeholder-project"></div>
+        <div class="project-image placeholder-project">
+          <img src="./Resources/Project thumbnails/1769623540346.png" alt="project-thumbnail">
+        </div>
         <div class="project-info">
           <h3>Project Four</h3>
           <p>Describe what makes this project unique and worth checking out.</p>
@@ -270,7 +278,9 @@
 
       <!-- Project Five -->
       <div class="project-card">
-        <div class="project-image placeholder-project"></div>
+        <div class="project-image placeholder-project">
+          <img src="./Resources/Project thumbnails/53811-removebg-preview.png" alt="project-thumbnail">
+        </div>
         <div class="project-info">
           <h3>Project Five</h3>
           <p>Describe what makes this project unique and worth checking out.</p>
