--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
           <img src="./Resources/Project thumbnails/1769623229436.png" alt="project-thumbnail">
         </div>
         <div class="project-info">
-          <h3>Project One</h3>
-          <p>A short description of this project goes here. Keep it concise but clear.</p>
+          <h3>Looma Concepts</h3>
+          <p>A sustainable fashion and e-commerce product UI/UX.</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project1" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
@@ -239,8 +239,8 @@
           <img src="./Resources/Project thumbnails/1769623240190.png" alt="project-thumbnail">
         </div>
         <div class="project-info">
-          <h3>Project Two</h3>
-          <p>Another cool project description. Highlight its best features here.</p>
+          <h3>To-Do List</h3>
+          <p>An interactive to do list with unique features, made with HTML, CSS, and JavaScript.</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project2" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
@@ -253,8 +253,8 @@
           <img src="./Resources/Project thumbnails/1769623266651.png" alt="project-thumbnail">
         </div>
         <div class="project-info">
-          <h3>Project Three</h3>
-          <p>Describe what makes this project unique and worth checking out.</p>
+          <h3>Coffee App Redesign</h3>
+          <p>A redesign of a coffee app with rewards system, made using Figma.</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project3" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
@@ -267,8 +267,8 @@
           <img src="./Resources/Project thumbnails/1769623540346.png" alt="project-thumbnail">
         </div>
         <div class="project-info">
-          <h3>Project Four</h3>
-          <p>Describe what makes this project unique and worth checking out.</p>
+          <h3>Portfolio Website</h3>
+          <p>A static modern and responsive professional portfolio website. Made with HTML, CSS and JS</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project3" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
@@ -282,8 +282,8 @@
           <img src="./Resources/Project thumbnails/53811-removebg-preview.png" alt="project-thumbnail">
         </div>
         <div class="project-info">
-          <h3>Project Five</h3>
-          <p>Describe what makes this project unique and worth checking out.</p>
+          <h3>FitMap</h3>
+          <p>A gym and fitness web app for gym users and owners with unique features to for an optimized user experience.</p>
           <div class="project-links">
             <a href="https://github.com/Dan-Samuel" target="_blank" class="github-links">GitHub</a>
             <a href="https://github.com/Dan-Samuel" target="_blank" class="demo-links">Live Demo</a>
