--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
         <div class="project-info">
           <h3>Portfolio Website</h3>
-          <p>A static modern and responsive professional portfolio website. Made with HTML, CSS and JS</p>
+          <p>A static modern and responsive professional portfolio website. Made with HTML, CSS and JS.</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project3" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
