--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
         <div class="project-info">
           <h3>Looma Concepts</h3>
-          <p>A sustainable fashion and e-commerce product UI/UX.</p>
+          <p>A sustainable fashion and e-commerce product (UI/UX).</p>
           <div class="project-links">
             <a href="https://github.com/yourusername/project1" target="_blank" class="github-links">GitHub</a>
             <a href="https://yourprojectlink.com" target="_blank" class="demo-links">Live Demo</a>
